# qwen3-from-scratch

./: .gitignore  benchmarking.py  main.py  pyproject.toml  readme.md  resource_accounting.md
attention/: grouped_query_attention.py  rmsnorm.py  rope.py
blocks/: grouped_query_attention.py  rope.py
common/: metrics.py  rmsnorm.py
experiments/: base_inf.yaml  base_train.yaml
generation/: generate.py
qwen3/: feed_forward.py  transformer.py
qwen3/config/: config.json
resources/: architecture.md  resource_accounting.md
src/blocks/: feed_forward.py  grouped_query_attention.py  rmsnorm.py  rope.py
src/common/: embedding.py  linear.py  metrics.py  softmax.py
src/generation/: generate.py
src/inference/: generate.py
src/preprocessing/: dataloader.py  preprocess_data.py  tokenizer.py
src/qwen3/: transformer.py
src/train/: checkpointing.py  loss.py  optimizer.py  train.py  utils.py
tests/: adapters.py
train/: loss.py  optimizer.py
